--- a/app/views/main.html
+++ b/app/views/main.html
@@ -7,5 +7,5 @@
     <label for="exampleInputEmail2">File</label>
     <input type="file" class="form-control" id="exampleInputEmail2" ng-model="data.file">
   </div>
-  <button type="submit" class="btn btn-default" ng-click="post(data)">Send invitation</button>
+  <button type="submit" class="btn btn-default" ng-click="on_click()">Send invitation</button>
 </form>
