--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,11 +1,41 @@
-<form class="form-inline">
-  <div class="form-group">
-    <label for="exampleInputName2">name</label>
-    <input type="text" class="form-control" id="exampleInputName2" ng-model="data.name">
+<div class="container">
+<div class="row">
+<div class="col-lg-6 col-md-7 col-sm-9">
+
+  <h4 style="border-bottom: 1px solid #c5c5c5;">
+    <i class="glyphicon glyphicon-user">
+    </i>
+    Account Access
+  </h4>
+  <div style="padding: 20px;" id="form-olvidado">
+  <form accept-charset="UTF-8" role="form" id="login-form" method="post">
+    <h4 class="">
+      Signin!
+    </h4>
+      <fieldset>
+        <div class="form-group input-group">
+          <span class="input-group-addon">
+            @
+          </span>
+          <input class="form-control" placeholder="Email" name="email" type="email" required="" autofocus="" ng-model="redentials.username">
+        </div>
+        <div class="form-group input-group">
+          <span class="input-group-addon">
+            <i class="glyphicon glyphicon-lock">
+            </i>
+          </span>
+          <input class="form-control" placeholder="Password" name="password" type="password" value="" required="" ng-model="redentials.password">
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary btn-block" ng-click="test_signup(redentials)">
+            Access
+          </button>
+          <p class="help-block">
+            <a class="pull-right text-muted" href="#" id="olvidado"><small>Forgot your password?</small></a>
+            <a class="pull-left text-muted" ng-click="test_signup(redentials)"><small>Signup!</small></a>
+
+          </p>
+        </div>
+      </fieldset>
+    </form>
   </div>
-  <div class="form-group">
-    <label for="exampleInputEmail2">File</label>
-    <input type="file" class="form-control" id="exampleInputEmail2" ng-model="data.file">
-  </div>
-  <button type="submit" class="btn btn-default" ng-click="on_click()">Send invitation</button>
-</form>
