--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,6 +9,7 @@
   </h4>
   <div style="padding: 20px;" id="form-olvidado">
   <form accept-charset="UTF-8" role="form" id="login-form" method="post">
+    <input type="file" id="profilePhotoFileUpload" fileread="redentials.files" multiple>
     <h4 class="">
       Signin!
     </h4>
@@ -27,14 +28,14 @@
           <input class="form-control" placeholder="Password" name="password" type="password" value="" required="" ng-model="redentials.password">
         </div>
         <div class="form-group">
-          <button type="submit" class="btn btn-primary btn-block" ng-click="test_signup(redentials)">
+          <button type="submit" class="btn btn-primary btn-block" ng-click="test(redentials)">
             Access
           </button>
-          <p class="help-block">
+          <!-- <p class="help-block">
             <a class="pull-right text-muted" href="#" id="olvidado"><small>Forgot your password?</small></a>
-            <a class="pull-left text-muted" ng-click="test_signup(redentials)"><small>Signup!</small></a>
+            <a class="pull-left text-muted" ng-click="test()"><small>Signup!</small></a>
 
-          </p>
+          </p> -->
         </div>
       </fieldset>
     </form>
